--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,10 +1,14 @@
 spring:
+  mvc:
+    hidden-method:
+      filter:
+        enabled: true
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:recipes
     #url: jdbc:h2:file:/data/recipes;AUTO_SERVER=TRUE
   jpa:
-    show-sql: true
+    #show-sql: true
     properties:
       hibernate:
         format_sql: true
