--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,4 +1,8 @@
 spring:
+  mvc:
+    hidden-method:
+      filter:
+        enabled: true
   datasource:
     url: jdbc:mysql://localhost:3306/recipes?useLegacyDatetimeCode=false&serverTimezone=UTC
     password: pass
