main photo's business logic implemented, other minor changes and bug fixes

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,3 +16,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     defer-datasource-initialization: true
+  servlet:
+    multipart:
+      location: /tmp
+uploads-path: C:/uploads/
